--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "es6-mongodb-driver",
   "version": "1.0.0",
   "description": "MongoClient Wrapper in ES6",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "dist",
+    "lib",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shaktiskm/es6-mongodb-driver.git"
